--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
           <div class="workTop">
             <div class="workIcon">◆</div>
             <div class="workMeta">
-              <div class="workTitle">Project Name</div>
-                <div class="workSub">Short one-line description</div>
+              <div class="workTitle">Door scripts</div>
+                <div class="workSub">One of my basic script systems</div>
             </div>
           </div>
           <div class="workBody">
