--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
 
         <h1 class="title">
-          <span class="titleLine">Jay</span>
+          <span class="titleLine">Sam</span>
           <span class="titleLine titleGrad">Developer</span>
         </h1>
 
@@ -150,7 +150,7 @@
       </div>
 
       <div class="workGrid" id="workGrid">
-        <a class="workCard" href= target= "https://Sam-Official-Website.github.io/Past-work/"_blank" rel="noreferrer">
+        <a class="workCard" href= target=https://sam-scripts.github.io/Past-work/_blank" rel="noreferrer">
           <div class="workTop">
             <div class="workIcon">◆</div>
             <div class="workMeta">
