--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
     }
 
     /* --- LAYOUT CONTAINER --- */
-    /* This centers everything nicely */
     .layout {
       max-width: 1100px;
       margin: 0 auto;
@@ -480,14 +479,14 @@
 
         <a href="https://jay-scripts-official.github.io/Past-work/" target="_blank" class="project-card">
           <div class="card-image">
-            <div class="placeholder">// PREVIEW LOADING</div>
+            <img src="./assets/project2.png" alt="Big Systems">
           </div>
           <div class="card-content">
-            <h3>Grand Marshal UI</h3>
-            <p>Complex user interface state management.</p>
+            <h3>Big Systems</h3>
+            <p>Scalable and complex system architecture.</p>
             <div class="card-tags">
-              <span class="card-tag">UI/UX</span>
-              <span class="card-tag">Frontend</span>
+              <span class="card-tag">Systems</span>
+              <span class="card-tag">Logic</span>
             </div>
           </div>
         </a>
